--- a/sunset-courier-services/src/app/image-carousel/image-carousel.component.html
+++ b/sunset-courier-services/src/app/image-carousel/image-carousel.component.html
@@ -5,18 +5,20 @@
   color="accent"
   maxWidth="auto"
   proportion="30"
-  slides="5"
+  slides="4"
   [loop]="true"
   [hideArrows]="false"
   [hideIndicators]="false"
   [useKeyboard]="true"
   [useMouseWheel]="false"
-  orientation="ltr"
->
+  orientation="ltr">
   <mat-carousel-slide
     #matCarouselSlide
     *ngFor="let slide of slides; let i = index"
     [image]="slide"
-    [hideOverlay]="false"
-  ></mat-carousel-slide>
+    [hideOverlay]="false"  >
+  <div style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #ffffff!important;">
+      <h1 style="color: #ffffff;">Nationwide deliveries and collection | We collect and deliver all across the UK.</h1>
+</div>
+</mat-carousel-slide>
 </mat-carousel>
