--- a/sunset-courier-services/src/app/quotation/quotation.component.html
+++ b/sunset-courier-services/src/app/quotation/quotation.component.html
@@ -1,4 +1,4 @@
-<div class="quotes">y<!-- <h1>Get a quote</h1> -->
+<div class="quotes"><!-- <h1>Get a quote</h1> -->
 <p style="font-size: 16px;">Fill in the form below and get a free no obligation quote today.</p>
 <mat-card>
     <form [formGroup]="quoteForm" (ngSubmit)="onSubmit()">
